force-app/main/default/objects/perception__c/perception__c.object-meta.xml
<CustomObject>
    <label>パーセプション(削除予定)</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>パーセプション名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>