force-app/main/default/objects/perception__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>