force-app/main/default/objects/perception__c/fields/AIssue1_A__c.field-meta.xml
<CustomField>
    <fullName>AIssue1_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課題感_A</label>
    <type>Checkbox</type>
</CustomField>