force-app/main/default/objects/perception__c/fields/DX_C_AcceptAppointment1day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptAppointment1day__c</fullName>
    <label>アポイント承諾1日付_DX</label>
    <type>Date</type>
</CustomField>