force-app/main/default/objects/perception__c/fields/DX_C_AcceptAppointment4day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptAppointment4day__c</fullName>
    <label>提案（キーマン紹介）のアポイント承諾日付_DX</label>
    <type>Date</type>
</CustomField>