force-app/main/default/objects/perception__c/fields/DX_C_AcceptNextSuggestion6day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptNextSuggestion6day__c</fullName>
    <label>次回物件提案承諾日付_DX</label>
    <type>Date</type>
</CustomField>