force-app/main/default/objects/perception__c/fields/DX_C_AcceptSuggestion5__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptSuggestion5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:詳細提案（技術評価など）承諾_DX</label>
    <type>Checkbox</type>
</CustomField>