force-app/main/default/objects/perception__c/fields/DX_C_AcceptSuggestion5day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptSuggestion5day__c</fullName>
    <label>詳細提案（技術評価など）承諾日付_DX</label>
    <type>Date</type>
</CustomField>