force-app/main/default/objects/perception__c/fields/DX_C_AnotherSiteManagerDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AnotherSiteManagerDate__c</fullName>
    <label>C：別の現場所長向け説明依頼日_DX</label>
    <type>Date</type>
</CustomField>