force-app/main/default/objects/perception__c/fields/DX_C_BIM_RequestForSuperiors__c.field-meta.xml
<CustomField>
    <fullName>DX_C_BIM_RequestForSuperiors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：BIM推責任者本人の上長職向け説明依頼_DX</label>
    <type>Checkbox</type>
</CustomField>