force-app/main/default/objects/perception__c/fields/DX_C_BIM_RequestForSuperiorsDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_BIM_RequestForSuperiorsDate__c</fullName>
    <label>C：BIM推責任者本人の上長職向け説明依頼日_DX</label>
    <type>Date</type>
</CustomField>