force-app/main/default/objects/perception__c/fields/DX_C_BoothArrive1day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_BoothArrive1day__c</fullName>
    <label>展示会ブース来場日_DX</label>
    <type>Date</type>
</CustomField>