force-app/main/default/objects/perception__c/fields/DX_C_DocumentRequest1__c.field-meta.xml
<CustomField>
    <fullName>DX_C_DocumentRequest1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:資料請求_DX</label>
    <type>Checkbox</type>
</CustomField>