force-app/main/default/objects/perception__c/fields/DX_C_Inquiry1__c.field-meta.xml
<CustomField>
    <fullName>DX_C_Inquiry1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:問い合わせ_DX</label>
    <type>Checkbox</type>
</CustomField>