force-app/main/default/objects/perception__c/fields/DX_C_Inquiry1day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_Inquiry1day__c</fullName>
    <label>問い合わせ日_DX</label>
    <type>Date</type>
</CustomField>