force-app/main/default/objects/perception__c/fields/DX_C_PropertyNames__c.field-meta.xml
<CustomField>
    <fullName>DX_C_PropertyNames__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：具体的な他の物件名の取得_DX</label>
    <type>Checkbox</type>
</CustomField>