force-app/main/default/objects/perception__c/fields/DX_C_PropertyNamesDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_PropertyNamesDate__c</fullName>
    <label>C：具体的な他の物件名の取得日_DX</label>
    <type>Date</type>
</CustomField>