force-app/main/default/objects/perception__c/fields/DX_C_RequestForDesignDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestForDesignDate__c</fullName>
    <label>C：設計向け説明依頼日_DX</label>
    <type>Date</type>
</CustomField>