force-app/main/default/objects/perception__c/fields/DX_C_RequestForIntroduce__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestForIntroduce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：現場を紹介できる担当者向け説明依頼_DX</label>
    <type>Checkbox</type>
</CustomField>