force-app/main/default/objects/perception__c/fields/DX_C_RequestForIntroduceDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestForIntroduceDate__c</fullName>
    <label>C：現場を紹介できる担当者向け説明依頼日_DX</label>
    <type>Date</type>
</CustomField>