force-app/main/default/objects/perception__c/fields/DX_C_RequestForManage__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestForManage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：経営層向けの説明依頼_DX</label>
    <type>Checkbox</type>
</CustomField>