force-app/main/default/objects/perception__c/fields/DX_C_RequestForManageDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestForManageDate__c</fullName>
    <label>C：経営層向けの説明依頼日_DX</label>
    <type>Date</type>
</CustomField>