force-app/main/default/objects/perception__c/fields/DX_C_RequestSuggestion4day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestSuggestion4day__c</fullName>
    <label>提案を依頼される日付_DX</label>
    <type>Date</type>
</CustomField>