force-app/main/default/objects/perception__c/fields/DX_C_RequestToManager__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestToManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：現場所長向け説明依頼_DX</label>
    <type>Checkbox</type>
</CustomField>