force-app/main/default/objects/perception__c/fields/DX_C_RequestToManagerDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestToManagerDate__c</fullName>
    <label>C：現場所長向け説明依頼日_DX</label>
    <type>Date</type>
</CustomField>