force-app/main/default/objects/perception__c/fields/DX_C_ResultsReport__c.field-meta.xml
<CustomField>
    <fullName>DX_C_ResultsReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：導入成果報告レポート提出_DX</label>
    <type>Checkbox</type>
</CustomField>