force-app/main/default/objects/perception__c/fields/DX_C_ResultsReportDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_ResultsReportDate__c</fullName>
    <label>C：導入成果報告レポート提出日_DX</label>
    <type>Date</type>
</CustomField>