force-app/main/default/objects/perception__c/fields/DX_C_SalesStaffCall3day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_SalesStaffCall3day__c</fullName>
    <label>営業担当者への相談電話日付_DX</label>
    <type>Date</type>
</CustomField>