force-app/main/default/objects/perception__c/fields/DX_C_SpecificPropertyNameDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_SpecificPropertyNameDate__c</fullName>
    <label>C：具体的な物件名の取得日_DX</label>
    <type>Date</type>
</CustomField>