force-app/main/default/objects/perception__c/fields/DX_C_SpecificTask3__c.field-meta.xml
<CustomField>
    <fullName>DX_C_SpecificTask3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:具体的な課題の共有_DX</label>
    <type>Checkbox</type>
</CustomField>