force-app/main/default/objects/perception__c/fields/DX_C_SpecificTask3day__c.field-meta.xml
<CustomField>
    <fullName>DX_C_SpecificTask3day__c</fullName>
    <label>具体的な課題の共有日付_DX</label>
    <type>Date</type>
</CustomField>