force-app/main/default/objects/perception__c/fields/DX_C_TaskHearing__c.field-meta.xml
<CustomField>
    <fullName>DX_C_TaskHearing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C：課題ヒアリング（課題ヒアリングシート記載）_DX</label>
    <type>Checkbox</type>
</CustomField>