force-app/main/default/objects/perception__c/fields/DX_C_TotalNumPDate__c.field-meta.xml
<CustomField>
    <fullName>DX_C_TotalNumPDate__c</fullName>
    <label>C：物件総数の確認日_DX</label>
    <type>Date</type>
</CustomField>