force-app/main/default/objects/perception__c/fields/DX_Level__c.field-meta.xml
<CustomField>
    <fullName>DX_Level__c</fullName>
    <formula>IF(
DX_C_AcceptNextSuggestion6__c=true,&quot;f&quot;,
IF(
DX_C_AcceptSuggestion5__c=true,&quot;e&quot;,
IF(
OR(DX_C_AcceptAppointment4__c=true, DX_C_RequestSuggestion4__c= true),&quot;d&quot;,
IF(
OR(DX_C_SalesStaffCall3__c=true,DX_C_SpecificTask3__c=true,
DX_M_AcceptAppointment3__c =true &amp;&amp; OR(DX_O_ListenBIM3__c =true, DX_O_WebColumnBrowse3__c =true)),
&quot;c&quot;,
IF(
DX_M_ListenIntroduction2__c =true &amp;&amp; DX_O_AcceptAppointment2__c =true,
&quot;b&quot;,
IF(
OR(DX_C_AcceptAppointment1__c=true, DX_C_DocumentRequest1__c=true, DX_C_Inquiry1__c=true, DX_C_Webinar1__c=true, DX_C_BoothArrive1__c=true),
&quot;a&quot;,
&quot;z&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レベル_DX</label>
    <type>Text</type>
</CustomField>