force-app/main/default/objects/perception__c/fields/DX_level_e_day__c.field-meta.xml
<CustomField>
    <fullName>DX_level_e_day__c</fullName>
    <label>レベル_DX変更日_e</label>
    <type>Date</type>
</CustomField>