force-app/main/default/objects/perception__c/fields/DX_LV_b_updDate__c.field-meta.xml
<CustomField>
    <fullName>DX_LV_b_updDate__c</fullName>
    <label>パーセプションLV_変更日_b_DX</label>
    <type>Date</type>
</CustomField>