force-app/main/default/objects/perception__c/fields/DX_M_AcceptAppointment1Date__c.field-meta.xml
<CustomField>
    <fullName>DX_M_AcceptAppointment1Date__c</fullName>
    <label>M：商談アポイント承諾日1_DX</label>
    <type>Date</type>
</CustomField>