force-app/main/default/objects/perception__c/fields/DX_M_AcceptAppointment2__c.field-meta.xml
<CustomField>
    <fullName>DX_M_AcceptAppointment2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M：商談アポイント承諾2_DX</label>
    <type>Checkbox</type>
</CustomField>