force-app/main/default/objects/perception__c/fields/DX_M_AcceptAppointment3__c.field-meta.xml
<CustomField>
    <fullName>DX_M_AcceptAppointment3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M:アポイント承諾3_DX</label>
    <type>Checkbox</type>
</CustomField>