force-app/main/default/objects/perception__c/fields/DX_M_AcceptAppointment3day__c.field-meta.xml
<CustomField>
    <fullName>DX_M_AcceptAppointment3day__c</fullName>
    <label>アポイント承諾3日付_DX</label>
    <type>Date</type>
</CustomField>