force-app/main/default/objects/perception__c/fields/DX_M_ListenIntroduction2day__c.field-meta.xml
<CustomField>
    <fullName>DX_M_ListenIntroduction2day__c</fullName>
    <label>BuildApp説明聞く日付_DX</label>
    <type>Date</type>
</CustomField>