force-app/main/default/objects/perception__c/fields/DX_O_AcceptAppointment2day__c.field-meta.xml
<CustomField>
    <fullName>DX_O_AcceptAppointment2day__c</fullName>
    <label>アポイント承諾2日付_DX</label>
    <type>Date</type>
</CustomField>