force-app/main/default/objects/perception__c/fields/DX_O_BIM__c.field-meta.xml
<CustomField>
    <fullName>DX_O_BIM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O：BIMに詳しい野原担当者が同行_DX</label>
    <type>Checkbox</type>
</CustomField>