force-app/main/default/objects/perception__c/fields/DX_O_BIMDate__c.field-meta.xml
<CustomField>
    <fullName>DX_O_BIMDate__c</fullName>
    <label>O：BIMに詳しい野原担当者が同行日_DX</label>
    <type>Date</type>
</CustomField>