force-app/main/default/objects/perception__c/fields/DX_O_BoothArrive__c.field-meta.xml
<CustomField>
    <fullName>DX_O_BoothArrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O：展示会ブース来場_DX</label>
    <type>Checkbox</type>
</CustomField>