force-app/main/default/objects/perception__c/fields/DX_O_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>DX_O_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O：BuildApp実証実験事例紹介_DX</label>
    <type>Checkbox</type>
</CustomField>