force-app/main/default/objects/perception__c/fields/DX_O_DocumentRequest1Date__c.field-meta.xml
<CustomField>
    <fullName>DX_O_DocumentRequest1Date__c</fullName>
    <label>O：資料請求日_DX</label>
    <type>Date</type>
</CustomField>