force-app/main/default/objects/perception__c/fields/DX_O_Inquiry1Date__c.field-meta.xml
<CustomField>
    <fullName>DX_O_Inquiry1Date__c</fullName>
    <label>O:問い合わせ日_DX</label>
    <type>Date</type>
</CustomField>