force-app/main/default/objects/perception__c/fields/DX_O_ListenBIM3day__c.field-meta.xml
<CustomField>
    <fullName>DX_O_ListenBIM3day__c</fullName>
    <label>内装BIM取組み意義聞く日付_DX</label>
    <type>Date</type>
</CustomField>