force-app/main/default/objects/perception__c/fields/DX_O_WebColumnBrowse3day__c.field-meta.xml
<CustomField>
    <fullName>DX_O_WebColumnBrowse3day__c</fullName>
    <label>WEBコラム閲覧日付_DX</label>
    <type>Date</type>
</CustomField>