force-app/main/default/objects/perception__c/fields/DX_O_WebinarJoining__c.field-meta.xml
<CustomField>
    <fullName>DX_O_WebinarJoining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O：Webinar参加_DX</label>
    <type>Checkbox</type>
</CustomField>