force-app/main/default/objects/perception__c/fields/DX_O_WebinarJoiningDate__c.field-meta.xml
<CustomField>
    <fullName>DX_O_WebinarJoiningDate__c</fullName>
    <label>O：Webinar参加日_DX</label>
    <type>Date</type>
</CustomField>