force-app/main/default/objects/perception__c/fields/DX_O_WebinarVideoViewing__c.field-meta.xml
<CustomField>
    <fullName>DX_O_WebinarVideoViewing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:Webinar動画閲覧_DX</label>
    <type>Checkbox</type>
</CustomField>