force-app/main/default/objects/perception__c/fields/DX_O_WebinarVideoViewingDate__c.field-meta.xml
<CustomField>
    <fullName>DX_O_WebinarVideoViewingDate__c</fullName>
    <label>O:Webinar動画閲覧日_DX</label>
    <type>Date</type>
</CustomField>