force-app/main/default/objects/perception__c/fields/Issue1_C_text__c.field-meta.xml
<CustomField>
    <fullName>Issue1_C_text__c</fullName>
    <label>課題感_C(自由記述)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>