force-app/main/default/objects/perception__c/fields/Issue1_D__c.field-meta.xml
<CustomField>
    <fullName>Issue1_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課題感_D</label>
    <type>Checkbox</type>
</CustomField>