force-app/main/default/objects/perception__c/fields/JN_Keyman__c.field-meta.xml
<CustomField>
    <fullName>JN_Keyman__c</fullName>
    <formula>TEXT( contact__r.JU_Keyman__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>キーマン_JN</label>
    <type>Text</type>
</CustomField>