force-app/main/default/objects/perception__c/fields/JU_C_ConsultingWork5__c.field-meta.xml
<CustomField>
    <fullName>JU_C_ConsultingWork5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:コンサル業務実施確定_JU</label>
    <type>Checkbox</type>
</CustomField>