force-app/main/default/objects/perception__c/fields/JU_C_SalesStaffConsult3__c.field-meta.xml
<CustomField>
    <fullName>JU_C_SalesStaffConsult3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:営業担当へ相談あり3_JU</label>
    <type>Checkbox</type>
</CustomField>