force-app/main/default/objects/perception__c/fields/JU_Level__c.field-meta.xml
<CustomField>
    <fullName>JU_Level__c</fullName>
    <formula>IF(
JU_C_InstractionService6__c=true,&quot;ｆ&quot;,
IF(
OR(JU_C_ConsultingWork5__c=true, JU_M_NextOpportunity5__c=true &amp;&amp; JU_O_DeactivateBudgetLimit5__c =true),
&quot;e&quot;,
IF(
OR(JU_C_SalesStaffConsult4__c=true,
JU_M_NextAppointment4__c = true &amp;&amp; OR(JU_O_SalesIntroduction4__c=true, JU_O_MailSubscribe4__c = true)),
&quot;ｄ&quot;,
IF(
OR(JU_C_SalesStaffConsult3__c=true,
JU_M_NextAppointment3__c=true &amp;&amp; OR(JU_O_ServiceDM3__c=true, JU_O_ThanksDM3__c=true, JU_O_WebAssess3__c=true, JU_O_ColumnOpen3__c = true,JU_O_WhitePaperDL3__c=true)),
&quot;ｃ&quot;,
IF(
OR(JU_C_SalesStaffConsult2__c =true,
JU_M_BPOIntroduction2__c =true &amp;&amp; OR(JU_O_MailDeliveryOK2__c =true, JU_O_TaskHearing2__c
=true, JU_O_NextAppointment2__c=true)),
&quot;ｂ&quot;,
IF(OR(JU_C_GetFirstInterview1__c=true ,
JU_M_GetContactAdress1__c=true &amp;&amp; OR(JU_O_WhitePaperDL1__c = true, JU_O_SeminarParticipate1__c = true, JU_O_ExhibitionParticipate1__c =true)),
&quot;ａ&quot;,
&quot;ｚ&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レベル_JU</label>
    <type>Text</type>
</CustomField>