force-app/main/default/objects/perception__c/fields/JU_M_BPOIntroduction2__c.field-meta.xml
<CustomField>
    <fullName>JU_M_BPOIntroduction2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M:合理化サービス（作図積算BPO）紹介_JU</label>
    <type>Checkbox</type>
</CustomField>