force-app/main/default/objects/perception__c/fields/JU_M_NextOpportunity5__c.field-meta.xml
<CustomField>
    <fullName>JU_M_NextOpportunity5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M:次回商談獲得_JU</label>
    <type>Checkbox</type>
</CustomField>