force-app/main/default/objects/perception__c/fields/JU_O_DeactivateBudgetLimit5__c.field-meta.xml
<CustomField>
    <fullName>JU_O_DeactivateBudgetLimit5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:予算のハードル解除_JU</label>
    <type>Checkbox</type>
</CustomField>