force-app/main/default/objects/perception__c/fields/JU_O_SeminarParticipate1__c.field-meta.xml
<CustomField>
    <fullName>JU_O_SeminarParticipate1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:セミナー参加_JU</label>
    <type>Checkbox</type>
</CustomField>