force-app/main/default/objects/perception__c/fields/JU_O_ThanksDM3__c.field-meta.xml
<CustomField>
    <fullName>JU_O_ThanksDM3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:サンクスDM送付_JU</label>
    <type>Checkbox</type>
</CustomField>