force-app/main/default/objects/perception__c/fields/LatestAppointment__c.field-meta.xml
<CustomField>
    <fullName>LatestAppointment__c</fullName>
    <label>最新訪問アポ日付</label>
    <type>Date</type>
</CustomField>