force-app/main/default/objects/perception__c/fields/OpportunityRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRecordTypeId__c</fullName>
    <formula>Opp__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談レコードタイプ</label>
    <type>Text</type>
</CustomField>