force-app/main/default/objects/perception__c/fields/OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStageName__c</fullName>
    <formula>TEXT( Opp__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談フェーズ</label>
    <type>Text</type>
</CustomField>