force-app/main/default/objects/perception__c/fields/RationalizationDiagnose__c.field-meta.xml
<CustomField>
    <fullName>RationalizationDiagnose__c</fullName>
    <label>合理化診断</label>
    <type>Date</type>
</CustomField>