force-app/main/default/objects/perception__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>ロール</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>主担当</fullName>
            </value>
            <value>
                <fullName>意思決定者</fullName>
            </value>
            <value>
                <fullName>決裁権限者</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>