force-app/main/default/objects/perception__c/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <label>ウェビナー参加日付</label>
    <type>Date</type>
</CustomField>