force-app/main/default/objects/perception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>contact__c</columns>
    <columns>Opp__c</columns>
    <columns>DX_C_AcceptNextSuggestion6__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>